--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.5.0",
-    "jwt-decode": "^4.0.0",
-    "mobx": "^6.10.2",
-    "mobx-react-lite": "^4.0.4",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "axios": "1.6.8",
+    "bootstrap": "5.3.3",
+    "cors": "2.8.5",
+    "express": "4.19.2",
+    "express-fileupload": "1.5.0",
+    "jwt-decode": "4.0.0",
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7",
+    "react": "18.2.0",
+    "react-bootstrap": "2.10.2",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.3",
+    "react-scripts": "5.0.1",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
