--- a/package.json
+++ b/package.json
@@ -5,26 +5,30 @@
   "dependencies": {
     "axios": "1.6.8",
     "bootstrap": "5.3.3",
+    "chart.js": "^4.5.0",
     "cors": "2.8.5",
+    "d3": "^7.9.0",
     "express": "4.19.2",
     "express-fileupload": "1.5.0",
+    "fuse.js": "7.1.0",
     "jwt-decode": "4.0.0",
+    "leaflet": "^1.9.4",
     "mobx": "6.12.3",
     "mobx-react-lite": "4.0.7",
     "react": "18.2.0",
     "react-bootstrap": "2.10.2",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "2.1.4",
-    "fuse.js": "7.1.0"
+    "react-simple-maps": "^3.0.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "build": "craco build",
+    "build:split": "npm run build && node scripts/splitLargeFiles.js"},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -42,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0"
   }
 }
